--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<!-- Signup Form -->
 			<form id="signup-form" method="post" action="https://formspree.io/calvin@innoveerdigital.com"method="POST">
 				<input type="email" name="email _replyto" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up Send" />
+				<input type="submit" value="Send" />
 			</form>
 
 		<!-- Footer -->
