--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="https://formspree.io/calvin@innoveerdigital.com"method="POST">
-				<input type="email" name="email _replyto" id="email" placeholder="Email Address" />
-				<input type="submit" value="Send" />
+			<form id="signup-form" method="post" action="https://formspree.io/calvin@innoveerdigital.com" method="POST">
+				<input type="email" name="email _replyto" id="email" placeholder="Email Address" >
+				<input type="submit" value="Send" >
 			</form>
 
 		<!-- Footer -->
